syntax = "proto3";

option go_package = "pb/";

package  user_service;

message CheckTokenRequest {
   string token = 1;
   string clientIP = 2;
}

message CheckTokenResponse {
  string ID = 1;
  string Name = 2;
	string Comment = 3;
	string Token = 4;
}

service UserService {
  rpc CheckToken(CheckTokenRequest) returns (CheckTokenResponse) {}
}